// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IconButton > correctly uses the onClick callback 1`] = `
<div>
  <button
    class="_btn-icon_efc75b d-inline-flex align-items-stretch btn btn-primary"
    data-testid="icon-button"
    type="button"
  >
    <span
      class="_icon-part_efc75b"
    >
      BootstrapIconMock_Heart
    </span>
    <span
      class="_text-part_efc75b"
    >
      test with onClick
    </span>
  </button>
</div>
`;

exports[`IconButton > renders heart icon 1`] = `
<div>
  <button
    class="_btn-icon_efc75b d-inline-flex align-items-stretch btn btn-primary"
    data-testid="icon-button"
    type="button"
  >
    <span
      class="_icon-part_efc75b"
    >
      BootstrapIconMock_Heart
    </span>
    <span
      class="_text-part_efc75b"
    >
      test
    </span>
  </button>
</div>
`;

exports[`IconButton > renders with additional className 1`] = `
<div>
  <button
    class="_btn-icon_efc75b d-inline-flex align-items-stretch testClass btn btn-primary"
    data-testid="icon-button"
    type="button"
  >
    <span
      class="_icon-part_efc75b"
    >
      BootstrapIconMock_Heart
    </span>
    <span
      class="_text-part_efc75b"
    >
      test with additional className
    </span>
  </button>
</div>
`;

exports[`IconButton > renders with border 1`] = `
<div>
  <button
    class="_btn-icon_efc75b d-inline-flex align-items-stretch _with-border_efc75b btn btn-primary"
    data-testid="icon-button"
    type="button"
  >
    <span
      class="_icon-part_efc75b"
    >
      BootstrapIconMock_Heart
    </span>
    <span
      class="_text-part_efc75b"
    >
      test with border
    </span>
  </button>
</div>
`;
